<resources>
    <string name="app_name">homework1.2.1</string>
    <string name="subscription">Подписка</string>
    <string name="mail">Эл.почта</string>
    <string name="password">Пароль</string>
    <string name="btnOk">ОК</string>
    <string name="clear">Очистить</string>
    <string name="subscribe_sucsessful">Подписка на рассылку успешно оформлена для пользователя
     %1$s пароль %2$s</string>
</resources>
